<resources>
    <string name="app_name">PowerSwitch Demo</string>
    <string name="edit_message">Main App Logo Image</string>
    <string name="button_send">Settings</string>
    <string name="switch_questions">Questions</string>
    <string name="switch_sound">Sound</string>
    <string name="switch_vibration">Vibration</string>
    <string name="switch_misc">Miscellaneous</string>
    <string name="title_activity_landing_screen">LandingScreenActivity</string>
    <string name="info_message">AndEngine Level Instance</string>
    <string name="start_button">Start</string>
    <string name="title_activity_setting_screen">SettingScreen</string>
</resources>
